# GraphingCalc

./: CMakeLists.txt  README.md  history.txt  main.cpp
includes/animate/: animate.cpp  animate.h  constants.h  graph.cpp  graph.h  graph_info.h  plot.cpp  plot.h  sidebar.cpp  sidebar.h  system.cpp  system.h
includes/linked_list_functions/: linked_list_functions.h
includes/node/: node.h
includes/queue/: MyQueue.h
includes/rpn/: rpn.cpp  rpn.h
includes/shunting_yard/: shunting_yard.h  shuntying_yard.cpp
includes/stack/: MyStack.h
includes/token/: function.h  integer.h  leftparen.h  operator.h  rightparen.h  token.h  variable.h
includes/vector/: vector_class.h
